test-cases/call_unknown.exp
Error detected during type checking of modules call_unknown
[91mtest-cases/call_unknown.wybe:1:24: Call to unknown 'nonexistent_proc' from foo
[0m