test-cases/call_unknown.wybe
proc foo(x:int) nonexistent_proc(x) end
